fixed todo input misalignment

--- a/app_v2/src/components/TodoList.styl
+++ b/app_v2/src/components/TodoList.styl
@@ -11,7 +11,7 @@
   list-style-type none
 
 .todo-input
-  padding 16px 16px 16px 60px
+  padding 16px
   border none
   width 100%
   font-size 1.5em
